--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Matthew J Lowe Coding"
+      content="Matthew J Lowe coding requests, projects and portfolio"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple_logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <title>React App</title>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <title>MattjLowe Coding</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="scripts/js.js"></script>
   </body>
 </html>
